crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@355.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '{[1,4)}'::nummultirange * '{[0,2), [3,5)}'::nummultirange;"
---
SelectStmt@0..66
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..65
    AExpr@7..65
      TypeCast@7..31
        AConst@7..16
          Sconst@7..16 "'{[1,4)}'"
        Typecast@16..18 "::"
        TypeName@18..31
          Ident@18..31 "nummultirange"
      Whitespace@31..32 " "
      Ascii42@32..33 "*"
      Whitespace@33..34 " "
      TypeCast@34..65
        AConst@34..50
          Sconst@34..50 "'{[0,2), [3,5)}'"
        Typecast@50..52 "::"
        TypeName@52..65
          Ident@52..65 "nummultirange"
  Ascii59@65..66 ";"

