crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@356.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '{[1,4), [7,10)}'::nummultirange * '{[0,8), [9,12)}'::nummultirange;"
---
SelectStmt@0..75
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..74
    AExpr@7..74
      TypeCast@7..39
        AConst@7..24
          Sconst@7..24 "'{[1,4), [7,10)}'"
        Typecast@24..26 "::"
        TypeName@26..39
          Ident@26..39 "nummultirange"
      Whitespace@39..40 " "
      Ascii42@40..41 "*"
      Whitespace@41..42 " "
      TypeCast@42..74
        AConst@42..59
          Sconst@42..59 "'{[0,8), [9,12)}'"
        Typecast@59..61 "::"
        TypeName@61..74
          Ident@61..74 "nummultirange"
  Ascii59@74..75 ";"

