crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@357.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '{[1,4), [7,10)}'::nummultirange * '{[9,12)}'::nummultirange;"
---
SelectStmt@0..68
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..67
    AExpr@7..67
      TypeCast@7..39
        AConst@7..24
          Sconst@7..24 "'{[1,4), [7,10)}'"
        Typecast@24..26 "::"
        TypeName@26..39
          Ident@26..39 "nummultirange"
      Whitespace@39..40 " "
      Ascii42@40..41 "*"
      Whitespace@41..42 " "
      TypeCast@42..67
        AConst@42..52
          Sconst@42..52 "'{[9,12)}'"
        Typecast@52..54 "::"
        TypeName@54..67
          Ident@54..67 "nummultirange"
  Ascii59@67..68 ";"

