crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@358.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '{[1,4), [7,10)}'::nummultirange * '{[-5,-4), [5,6), [9,12)}'::nummultirange;"
---
SelectStmt@0..84
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..83
    AExpr@7..83
      TypeCast@7..39
        AConst@7..24
          Sconst@7..24 "'{[1,4), [7,10)}'"
        Typecast@24..26 "::"
        TypeName@26..39
          Ident@26..39 "nummultirange"
      Whitespace@39..40 " "
      Ascii42@40..41 "*"
      Whitespace@41..42 " "
      TypeCast@42..83
        AConst@42..68
          Sconst@42..68 "'{[-5,-4), [5,6), [9, ..."
        Typecast@68..70 "::"
        TypeName@70..83
          Ident@70..83 "nummultirange"
  Ascii59@83..84 ";"

