crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@363.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into test_multirange_gist select '{}'::int4multirange from generate_series(1,500) g;"
---
InsertStmt@0..91
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..32
    Ident@12..32 "test_multirange_gist"
  Whitespace@32..33 " "
  SelectStmt@33..90
    Select@33..39 "select"
    Whitespace@39..40 " "
    ResTarget@40..60
      TypeCast@40..60
        AConst@40..44
          Sconst@40..44 "'{}'"
        Typecast@44..46 "::"
        TypeName@46..60
          Ident@46..60 "int4multirange"
    Whitespace@60..61 " "
    From@61..65 "from"
    Whitespace@65..66 " "
    RangeFunction@66..90
      List@66..87
        FuncCall@66..87
          Ident@66..81 "generate_series"
          Ascii40@81..82 "("
          AConst@82..83
            Iconst@82..83 "1"
          Ascii44@83..84 ","
          AConst@84..87
            Iconst@84..87 "500"
      Ascii41@87..88 ")"
      Whitespace@88..89 " "
      Alias@89..90
        Ident@89..90 "g"
  Ascii59@90..91 ";"

