crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@365.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "insert into test_multirange_gist select int4multirange(int4range(NULL, g*10, '(]'), int4range(g*10, g*20, '(]')) from generate_series(1,100) g;"
---
InsertStmt@0..143
  Insert@0..6 "insert"
  Whitespace@6..7 " "
  Into@7..11 "into"
  Whitespace@11..12 " "
  RangeVar@12..32
    Ident@12..32 "test_multirange_gist"
  Whitespace@32..33 " "
  SelectStmt@33..142
    Select@33..39 "select"
    Whitespace@39..40 " "
    ResTarget@40..110
      FuncCall@40..110
        Ident@40..54 "int4multirange"
        Ascii40@54..55 "("
        FuncCall@55..81
          Ident@55..64 "int4range"
          Ascii40@64..65 "("
          AConst@65..69
            NullP@65..69 "NULL"
          Ascii44@69..70 ","
          Whitespace@70..71 " "
          AExpr@71..75
            ColumnRef@71..72
              Ident@71..72 "g"
            Ascii42@72..73 "*"
            AConst@73..75
              Iconst@73..75 "10"
          Ascii44@75..76 ","
          Whitespace@76..77 " "
          AConst@77..81
            Sconst@77..81 "'(]'"
        Ascii41@81..82 ")"
        Ascii44@82..83 ","
        Whitespace@83..84 " "
        FuncCall@84..110
          Ident@84..93 "int4range"
          Ascii40@93..94 "("
          AExpr@94..98
            ColumnRef@94..95
              Ident@94..95 "g"
            Ascii42@95..96 "*"
            AConst@96..98
              Iconst@96..98 "10"
          Ascii44@98..99 ","
          Whitespace@99..100 " "
          AExpr@100..104
            ColumnRef@100..101
              Ident@100..101 "g"
            Ascii42@101..102 "*"
            AConst@102..104
              Iconst@102..104 "20"
          Ascii44@104..105 ","
          Whitespace@105..106 " "
          AConst@106..110
            Sconst@106..110 "'(]'"
    Ascii41@110..111 ")"
    Ascii41@111..112 ")"
    Whitespace@112..113 " "
    From@113..117 "from"
    Whitespace@117..118 " "
    RangeFunction@118..142
      List@118..139
        FuncCall@118..139
          Ident@118..133 "generate_series"
          Ascii40@133..134 "("
          AConst@134..135
            Iconst@134..135 "1"
          Ascii44@135..136 ","
          AConst@136..139
            Iconst@136..139 "100"
      Ascii41@139..140 ")"
      Whitespace@140..141 " "
      Alias@141..142
        Ident@141..142 "g"
  Ascii59@142..143 ";"

